<resources>
    <string name="app_name">IcyPicks</string>
    <string name="see_profile">See Profile</string>
    <string name="all_ice_creams">All Ice Creams</string>
    <string name="must_try_ice_creams">Must Try Ice Creams</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="ice_cream_flavor">Ice Cream Flavor</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="add_location">Add Location</string>
    <string name="error">Error Finding Image</string>
    <string name="name">Name</string>
    <string name="favorite_flavor">Favorite Ice Cream Flavor</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="passwords_dont_match">Passwords do not match.</string>
    <string name="empty_fields">There are empty fields.</string>
    <string name="error_signing_up">Error signing up.</string>
    <string name="password_length_error">Password must be at least 8 characters long.</string>
    <string name="log_in_error">Unable to log in.</string>
    <string name="change">Change</string>
    <string name="change_value_tip">Tip: Click on a field to change its value!</string>
    <string name="error_reading_database">Error accessing profile information.</string>
    <string name="change_dialog_title">Change</string>
    <string name="dialog_positive">OK</string>
    <string name="empty_field_dialog_error">Field is empty.</string>
    <string name="profile_info_placeholder">About Me</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out_toast">Signed out</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="where_to_find_it">Where to find it:</string>
    <string name="comments">Comments:</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="empty_fields_in_sharing_error">No fields must be empty.</string>
    <string name="image_upload_failure">Error uploading your image, please try again.</string>
    <string name="image_upload_success">Your image was uploaded successfully. :D</string>
    <string name="text_upload_failure">There was an error uploading your data.</string>
    <string name="unexpected_error">An unexpected error has occurred.</string>
    <string name="error_loading_description">There was an error loading the user description.</string>
    <string name="must_try">Must Try</string>
    <string name="not_logged_in_error">You must be logged in to share.</string>
    <string name="error_uploading_image">There was an error uploading your image.</string>
    <string name="new_image_info_message">Your new image will be visible soon!</string>
    <string name="unable_to_load_description">Unable to load description.</string>
    <string name="unable_to_load_flavor">Unable to load ice cream flavor.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_must_try_ice_creams">You have no ice creams in your must-try list.</string>
    <string name="ice_cream_image">Ice Cream Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_image_placeholder">Profile Image Placeholder</string>
    <string name="loading_toast">It looks like the app takes too long to load. Please make sure that you are connected to the Internet.</string>
    <string name="write_to_database_error">Oops something went wrong. :( \nPlease navigate back and try again.</string>
    <string name="share_an_ice_cream">Share an ice cream!</string>
    <string name="no_location_entered">No location entered.</string>
</resources>
